--- a/applications/source/debezium-source/README.adoc
+++ b/applications/source/debezium-source/README.adoc
@@ -18,12 +18,20 @@ The `Debezium Source` currently supports CDC for multiple datastores: https://de
 == Options
 
 //tag::configuration-properties[]
-$$debezium.copy-headers$$:: $$Copy Change Event headers into Message headers.$$ *($$Boolean$$, default: `$$true$$`)*
-$$debezium.debezium-native-configuration$$:: $$<documentation missing>$$ *($$Properties$$, default: `$$<none>$$`)*
-$$debezium.header-format$$:: $${@link ChangeEvent} header format. Defaults to 'JSON'.$$ *($$DebeziumFormat$$, default: `$$<none>$$`, possible values: `JSON`,`AVRO`,`PROTOBUF`)*
-$$debezium.offset-commit-policy$$:: $$The policy that defines when the offsets should be committed to offset storage.$$ *($$DebeziumOffsetCommitPolicy$$, default: `$$<none>$$`, possible values: `ALWAYS`,`PERIODIC`,`DEFAULT`)*
-$$debezium.payload-format$$:: $${@link ChangeEvent} Key and Payload formats. Defaults to 'JSON'.$$ *($$DebeziumFormat$$, default: `$$<none>$$`, possible values: `JSON`,`AVRO`,`PROTOBUF`)*
-$$debezium.properties$$:: $$Spring pass-trough wrapper for debezium configuration properties. All properties with a 'debezium.properties.*' prefix are native Debezium properties.$$ *($$Map<String, String>$$, default: `$$<none>$$`)*
+Properties grouped by prefix:
+
+
+=== debezium
+
+$$debezium-native-configuration$$:: $$<documentation missing>$$ *($$Properties$$, default: `$$<none>$$`)*
+$$header-format$$:: $${@link ChangeEvent} header format. Defaults to 'JSON'.$$ *($$DebeziumFormat$$, default: `$$<none>$$`, possible values: `JSON`,`AVRO`,`PROTOBUF`)*
+$$offset-commit-policy$$:: $$The policy that defines when the offsets should be committed to offset storage.$$ *($$DebeziumOffsetCommitPolicy$$, default: `$$<none>$$`, possible values: `ALWAYS`,`PERIODIC`,`DEFAULT`)*
+$$payload-format$$:: $${@link ChangeEvent} Key and Payload formats. Defaults to 'JSON'.$$ *($$DebeziumFormat$$, default: `$$<none>$$`, possible values: `JSON`,`AVRO`,`PROTOBUF`)*
+$$properties$$:: $$Spring pass-trough wrapper for debezium configuration properties. All properties with a 'debezium.properties.*' prefix are native Debezium properties.$$ *($$Map<String, String>$$, default: `$$<none>$$`)*
+
+=== debezium.supplier
+
+$$copy-headers$$:: $$Copy Change Event headers into Message headers.$$ *($$Boolean$$, default: `$$true$$`)*
 //end::configuration-properties[]
 
 ==== Event flattening configuration
@@ -156,10 +164,10 @@ Use following properties to connect the Debezium Source to MySQL DB:
 ----
 debezium.properties.connector.class=io.debezium.connector.mysql.MySqlConnector # <1>
 
-debezium.properties.topic.prefix=my-topic # <2>
 debezium.properties.name=my-connector # <2>
+debezium.properties.topic.prefix=my-topic # <2>
 debezium.properties.database.server.id=85744 # <2>
-debezium.properties.database.server.name=my-app-connector # <2>
+
 
 debezium.properties.database.user=debezium # <3>
 debezium.properties.database.password=dbz # <3>
@@ -176,7 +184,6 @@ debezium.properties.transforms.unwrap.add.fields=name,db # <5>
 debezium.properties.transforms.unwrap.delete.handling.mode=none # <5>
 debezium.properties.transforms.unwrap.drop.tombstones=true # <5>
 
-debezium.properties.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <6>
 debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <6>
 debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <6>
 
@@ -214,14 +221,12 @@ Use following properties to connect the Debezium Source to PostgreSQL:
 ----
 debezium.properties.connector.class=io.debezium.connector.postgresql.PostgresConnector # <1>
 
-debezium.properties.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
 debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
 debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
 
 debezium.properties.topic.prefix=my-topic # <3>
 debezium.properties.name=my-connector # <3>
 debezium.properties.database.server.id=85744 # <3>
-debezium.properties.database.server.name=my-app-connector # <3>
 
 debezium.properties.database.user=postgres  # <4>
 debezium.properties.database.password=postgres # <4>
@@ -282,14 +287,12 @@ debezium.properties.connector.class=io.debezium.connector.mongodb.MongodbSourceC
 debezium.properties.topic.prefix=my-topic
 debezium.properties.name=my-connector
 debezium.properties.database.server.id=85744
-debezium.properties.database.server.name=my-app-connector
 
-debezium.properties.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
 debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
 debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
 
 debezium.properties.mongodb.hosts=rs0/localhost:27017 # <3>
-debezium.properties.mongodb.name=dbserver1 # <3>
+debezium.properties.topic.prefix=dbserver1 # <3>
 debezium.properties.mongodb.user=debezium # <3>
 debezium.properties.mongodb.password=dbz # <3>
 debezium.properties.database.whitelist=inventory # <3>
@@ -337,14 +340,12 @@ Use following properties to connect the Debezium Source to SQLServer:
 ----
 debezium.properties.connector.class=io.debezium.connector.sqlserver.SqlServerConnector # <1>
 
-debezium.properties.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
 debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
 debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
 
 debezium.properties.topic.prefix=my-topic # <3>
 debezium.properties.name=my-connector # <3>
 debezium.properties.database.server.id=85744 # <3>
-debezium.properties.database.server.name=my-app-connector # <3>
 
 debezium.properties.database.user=sa  # <4>
 debezium.properties.database.password=Password! # <4>
@@ -379,7 +380,7 @@ cat ./inventory.sql | docker exec -i dbz_oracle sqlplus debezium/dbz@//localhost
 
 [source,shell]
 ----
-java -jar debezium-source.jar --debezium.properties.connector.class=io.debezium.connector.mysql.MySqlConnector --debezium.properties.topic.prefix=my-topic --debezium.properties.name=my-connector --debezium.properties.database.server.id=85744 --debezium.properties.database.server.name=my-app-connector  --debezium.properties.database.server.id=85744 --debezium.properties.database.server.name=my-app-connector --debezium.properties.database.user=debezium --debezium.properties.database.password=dbz --debezium.properties.database.hostname=localhost --debezium.properties.database.port=3306 --debezium.properties.database.history=io.debezium.relational.history.MemoryDatabaseHistory --debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory --debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore
+java -jar debezium-source.jar --debezium.properties.connector.class=io.debezium.connector.mysql.MySqlConnector --debezium.properties.topic.prefix=my-topic --debezium.properties.name=my-connector --debezium.properties.database.server.id=85744  --debezium.properties.database.server.id=85744 --debezium.properties.database.user=debezium --debezium.properties.database.password=dbz --debezium.properties.database.hostname=localhost --debezium.properties.database.port=3306 --debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory --debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore
 ----
 
 
