--- a/functions/consumer/mqtt-consumer/README.adoc
+++ b/functions/consumer/mqtt-consumer/README.adoc
@@ -16,6 +16,8 @@ All configuration properties are prefixed with `mqtt.consumer`.
 
 For more information on the various options available, please see link:src/main/java/org/springframework/cloud/fn/consumer/mqtt/MqttConsumerProperties.java[MqttConsumerProperties].
 
+A `ComponentCustomizer<MongoDbMessageSource>` bean can be added in the target project to provide any custom options for the `MongoDbMessageSource` configuration used by the `mongodbSupplier`.
+
 ## SSL Configuration
 
 The MQTT Paho client can accept an SSL configuration via `MqttConnectOptions.setSSLProperties()`.
