--- a/functions/consumer/sftp-consumer/README.adoc
+++ b/functions/consumer/sftp-consumer/README.adoc
@@ -16,6 +16,8 @@ All configuration properties are prefixed with `sftp.consumer`.
 
 For more information on the various options available, please see link:src/main/java/org/springframework/cloud/fn/consumer/sftp/SFTPConsumerProperties.java[SftpConsumerProperties].
 
+A `ComponentCustomizer<SftpMessageHandlerSpec>` bean can be added in the target project to provide any custom options for the `SftpMessageHandlerSpec` configuration used by the `sftpConsumer`.
+
 ## Tests
 
 See this link:src/test/java/org/springframework/cloud/fn/consumer/sftp[test suite] for the various ways, this consumer is used.
