Update documentation for local development scripts.

--- a/README.adoc
+++ b/README.adoc
@@ -191,6 +191,23 @@ This build requires GraalVM JDK 17 distribution in order to build the script fun
 
 If you are building locally and don't want to publish to a repository set: `export LOCAL=true`
 
+==== Quick Compile
+
+This will compile all jars and publish to local repo.
+
+[source,shell]
+....
+./quick-compile.sh
+....
+
+==== Boil the Ocean
+
+This will build and test / integration test all the modules.
+
+....
+./full-build-test.sh
+....
+
 ==== Core
 
 This will build the core functionality and all functions.
